crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_strict_failure_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#21 : Data = listData (trace "operand" in error) in
let effect#23 : int = trace "between" in 0 in
case@Data data#21 of
  DataList payload#22 -> trace "selected" in 9
--- unoptimized UPLC
(program 1.1.0
  [(lam data_21
    [(lam effect_23
      [(lam generated_24
        (force
          [[[[[[(force (builtin chooseData)) generated_24] (delay (error))] (delay (error))]
            (delay
              (force
                [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]
            (delay (error))]
            (delay (error))]))
        data_21])
      (force
        [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
    [(builtin listData)
      (force [[(force (builtin trace)) (con string "operand")] (delay (error))])]])
--- optimized Core
let anf#4 : list Data = trace "operand" in error in
let data#1 : Data = listData anf#4 in
let effect#2 : int = trace "between" in 0 in
trace "selected" in 9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_7
    [(lam anf_3
      [(lam data_5
        [(lam effect_6
          (force [[builtin_7 (con string "selected")] (delay (con integer 9))]))
          (force [[builtin_7 (con string "between")] (delay (con integer 0))])])
        [(builtin listData) anf_3]])
      (force [[builtin_7 (con string "operand")] (delay (error))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#24 : list Data = trace "operand" in error in
let data#21 : Data = listData anf#24 in
let effect#23 : int = trace "between" in 0 in
case@Data data#21 of
  DataList payload#22 -> trace "selected" in 9
--- isolated folded Core
let anf#24 : list Data = trace "operand" in error in
let data#21 : Data = listData anf#24 in
let effect#23 : int = trace "between" in 0 in
let payload#22 : list Data = anf#24 in
trace "selected" in 9
--- isolated cleaned Core
let anf#24 : list Data = trace "operand" in error in
let data#21 : Data = listData anf#24 in
let effect#23 : int = trace "between" in 0 in
trace "selected" in 9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_24
    [(lam data_21
      [(lam effect_23
        [(lam generated_25
          (force
            [[[[[[(force (builtin chooseData)) generated_25] (delay (error))] (delay (error))]
              (delay
                (force
                  [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]
              (delay (error))]
              (delay (error))]))
          data_21])
        (force
          [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
      [(builtin listData) anf_24]])
    (force [[(force (builtin trace)) (con string "operand")] (delay (error))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_24
    [(lam data_21
      [(lam effect_23
        (force
          [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))
        (force
          [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
      [(builtin listData) anf_24]])
    (force [[(force (builtin trace)) (con string "operand")] (delay (error))])])
--- result
error: ExplicitErrorTerm
--- logs
["operand"]
