crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_traced.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (trace "producer" in listData (con (list data) [(I 42)])) of
  DataList payload#9 -> payload#9
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_10
    (force
      [[[[[[(force (builtin chooseData)) generated_10] (delay (error))] (delay (error))]
        (delay [(lam payload_9 payload_9) [(builtin unListData) generated_10]])]
        (delay (error))]
        (delay (error))]))
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay [(builtin listData) (con (list data) [(I 42)])])])])
--- optimized Core
let anf#2 : Data = trace "producer" in listData (con (list data) [(I 42)]) in
case@Data anf#2 of
  DataList payload#1 -> payload#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam builtin_7
      [(lam anf_3
        [(lam generated_5
          (force
            [[[[[[builtin_6 generated_5] (delay (error))] (delay (error))]
              (delay [(lam payload_4 payload_4) [(builtin unListData) generated_5]])]
              (delay (error))]
              (delay (error))]))
          anf_3])
        (force
          [[builtin_7 (con string "producer")]
            (delay [(builtin listData) (con (list data) [(I 42)])])])])
      (force (builtin trace))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#12 : Data = trace "producer" in listData (con (list data) [(I 42)]) in
case@Data anf#12 of
  DataList payload#9 -> payload#9
--- isolated folded Core
let anf#12 : Data = trace "producer" in listData (con (list data) [(I 42)]) in
case@Data anf#12 of
  DataList payload#9 -> payload#9
--- isolated cleaned Core
let anf#12 : Data = trace "producer" in listData (con (list data) [(I 42)]) in
case@Data anf#12 of
  DataList payload#9 -> payload#9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_12
    [(lam generated_13
      (force
        [[[[[[(force (builtin chooseData)) generated_13] (delay (error))] (delay (error))]
          (delay [(lam payload_9 payload_9) [(builtin unListData) generated_13]])]
          (delay (error))]
          (delay (error))]))
      anf_12])
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay [(builtin listData) (con (list data) [(I 42)])])])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_12
    [(lam generated_13
      (force
        [[[[[[(force (builtin chooseData)) generated_13] (delay (error))] (delay (error))]
          (delay [(lam payload_9 payload_9) [(builtin unListData) generated_13]])]
          (delay (error))]
          (delay (error))]))
      anf_12])
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay [(builtin listData) (con (list data) [(I 42)])])])])
--- result
(con (list data) [(I 42)])
--- logs
["producer"]
