crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_wrong_empty_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (con (list integer) []) of
  DataList payload#25 -> (con (list data) [])
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_26
    (force
      [[[[[[(force (builtin chooseData)) generated_26] (delay (error))] (delay (error))]
        (delay (con (list data) []))]
        (delay (error))]
        (delay (error))]))
    [(builtin listData) (con (list integer) [])]])
--- optimized Core
let anf#2 : Data = listData (con (list integer) []) in
(con (list data) [])
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 (con (list data) [])) [(builtin listData) (con (list integer) [])]])
--- isolated pass
--- isolated ANF input
let anf#26 : Data = listData (con (list integer) []) in
case@Data anf#26 of
  DataList payload#25 -> (con (list data) [])
--- isolated folded Core
let data_operand#27 : list int = (con (list integer) []) in
let anf#26 : Data = listData data_operand#27 in
let payload#25 : list Data = data_operand#27 in
(con (list data) [])
--- isolated cleaned Core
let anf#26 : Data = listData (con (list integer) []) in
(con (list data) [])
--- isolated UPLC before
(program 1.1.0
  [(lam anf_26
    [(lam generated_27
      (force
        [[[[[[(force (builtin chooseData)) generated_27] (delay (error))] (delay (error))]
          (delay (con (list data) []))]
          (delay (error))]
          (delay (error))]))
      anf_26])
    [(builtin listData) (con (list integer) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_26 (con (list data) [])) [(builtin listData) (con (list integer) [])]])
--- result
error: Runtime(TypeMismatch(Data, ProtoList(Integer, [])))
--- logs
[]
