crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_wrong_empty_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (con (list integer) []) of
  DataList payload#28 -> payload#28
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_29
    (force
      [[[[[[(force (builtin chooseData)) generated_29] (delay (error))] (delay (error))]
        (delay [(lam payload_28 payload_28) [(builtin unListData) generated_29]])]
        (delay (error))]
        (delay (error))]))
    [(builtin listData) (con (list integer) [])]])
--- optimized Core
let anf#2 : Data = listData (con (list integer) []) in
case@Data anf#2 of
  DataList payload#1 -> payload#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam anf_3
      [(lam generated_5
        (force
          [[[[[[builtin_6 generated_5] (delay (error))] (delay (error))]
            (delay [(lam payload_4 payload_4) [(builtin unListData) generated_5]])]
            (delay (error))]
            (delay (error))]))
        anf_3])
      [(builtin listData) (con (list integer) [])]])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#29 : Data = listData (con (list integer) []) in
case@Data anf#29 of
  DataList payload#28 -> payload#28
--- isolated folded Core
let data_operand#30 : list int = (con (list integer) []) in
let anf#29 : Data = listData data_operand#30 in
let payload#28 : list Data = data_operand#30 in
payload#28
--- isolated cleaned Core
let data_operand#30 : list int = (con (list integer) []) in
let anf#29 : Data = listData data_operand#30 in
data_operand#30
--- isolated UPLC before
(program 1.1.0
  [(lam anf_29
    [(lam generated_30
      (force
        [[[[[[(force (builtin chooseData)) generated_30] (delay (error))] (delay (error))]
          (delay [(lam payload_28 payload_28) [(builtin unListData) generated_30]])]
          (delay (error))]
          (delay (error))]))
      anf_29])
    [(builtin listData) (con (list integer) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_30
    [(lam anf_29 data_operand_30) [(builtin listData) data_operand_30]])
    (con (list integer) [])])
--- result
error: Runtime(TypeMismatch(Data, ProtoList(Integer, [])))
--- logs
[]
