crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_wrong_items_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (con (list integer) [7]) of
  DataList payload#31 -> (con (list data) [])
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_32
    (force
      [[[[[[(force (builtin chooseData)) generated_32] (delay (error))] (delay (error))]
        (delay (con (list data) []))]
        (delay (error))]
        (delay (error))]))
    [(builtin listData) (con (list integer) [7])]])
--- optimized Core
let anf#2 : Data = listData (con (list integer) [7]) in
case@Data anf#2 of
  DataList payload#1 -> (con (list data) [])
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam anf_3
      [(lam generated_5
        (force
          [[[[[[builtin_6 generated_5] (delay (error))] (delay (error))]
            (delay (con (list data) []))]
            (delay (error))]
            (delay (error))]))
        anf_3])
      [(builtin listData) (con (list integer) [7])]])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#32 : Data = listData (con (list integer) [7]) in
case@Data anf#32 of
  DataList payload#31 -> (con (list data) [])
--- isolated folded Core
let data_operand#33 : list int = (con (list integer) [7]) in
let anf#32 : Data = listData data_operand#33 in
let payload#31 : list Data = data_operand#33 in
(con (list data) [])
--- isolated cleaned Core
let anf#32 : Data = listData (con (list integer) [7]) in
(con (list data) [])
--- isolated UPLC before
(program 1.1.0
  [(lam anf_32
    [(lam generated_33
      (force
        [[[[[[(force (builtin chooseData)) generated_33] (delay (error))] (delay (error))]
          (delay (con (list data) []))]
          (delay (error))]
          (delay (error))]))
      anf_32])
    [(builtin listData) (con (list integer) [7])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_32 (con (list data) []))
    [(builtin listData) (con (list integer) [7])]])
--- result
error: Runtime(TypeMismatch(Data, ProtoList(Integer, [Integer(7)])))
--- logs
[]
