crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_wrong_pair_empty_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (con (list (pair data integer)) []) of
  DataList payload#37 -> (con (list data) [])
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_38
    (force
      [[[[[[(force (builtin chooseData)) generated_38] (delay (error))] (delay (error))]
        (delay (con (list data) []))]
        (delay (error))]
        (delay (error))]))
    [(builtin listData) (con (list (pair data integer)) [])]])
--- optimized Core
let anf#2 : Data = listData (con (list (pair data integer)) []) in
case@Data anf#2 of
  DataList payload#1 -> (con (list data) [])
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam anf_3
      [(lam generated_5
        (force
          [[[[[[builtin_6 generated_5] (delay (error))] (delay (error))]
            (delay (con (list data) []))]
            (delay (error))]
            (delay (error))]))
        anf_3])
      [(builtin listData) (con (list (pair data integer)) [])]])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#38 : Data = listData (con (list (pair data integer)) []) in
case@Data anf#38 of
  DataList payload#37 -> (con (list data) [])
--- isolated folded Core
let data_operand#39 : list (pair Data int) = (con (list (pair data integer)) []) in
let anf#38 : Data = listData data_operand#39 in
let payload#37 : list Data = data_operand#39 in
(con (list data) [])
--- isolated cleaned Core
let anf#38 : Data = listData (con (list (pair data integer)) []) in
(con (list data) [])
--- isolated UPLC before
(program 1.1.0
  [(lam anf_38
    [(lam generated_39
      (force
        [[[[[[(force (builtin chooseData)) generated_39] (delay (error))] (delay (error))]
          (delay (con (list data) []))]
          (delay (error))]
          (delay (error))]))
      anf_38])
    [(builtin listData) (con (list (pair data integer)) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_38 (con (list data) []))
    [(builtin listData) (con (list (pair data integer)) [])]])
--- result
error: Runtime(TypeMismatch(Data, ProtoList(Pair(Data, Integer), [])))
--- logs
[]
