crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_wrong_pair_empty_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (con (list (pair data integer)) []) of
  DataList payload#40 -> payload#40
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_41
    (force
      [[[[[[(force (builtin chooseData)) generated_41] (delay (error))] (delay (error))]
        (delay [(lam payload_40 payload_40) [(builtin unListData) generated_41]])]
        (delay (error))]
        (delay (error))]))
    [(builtin listData) (con (list (pair data integer)) [])]])
--- optimized Core
let data_operand#3 : list (pair Data int) = (con (list (pair data integer)) []) in
let anf#2 : Data = listData data_operand#3 in
data_operand#3
--- optimized UPLC
(program 1.1.0
  [(lam data_operand_1
    [(lam anf_4 data_operand_1) [(builtin listData) data_operand_1]])
    (con (list (pair data integer)) [])])
--- isolated pass
--- isolated ANF input
let anf#41 : Data = listData (con (list (pair data integer)) []) in
case@Data anf#41 of
  DataList payload#40 -> payload#40
--- isolated folded Core
let data_operand#42 : list (pair Data int) = (con (list (pair data integer)) []) in
let anf#41 : Data = listData data_operand#42 in
let payload#40 : list Data = data_operand#42 in
payload#40
--- isolated cleaned Core
let data_operand#42 : list (pair Data int) = (con (list (pair data integer)) []) in
let anf#41 : Data = listData data_operand#42 in
data_operand#42
--- isolated UPLC before
(program 1.1.0
  [(lam anf_41
    [(lam generated_42
      (force
        [[[[[[(force (builtin chooseData)) generated_42] (delay (error))] (delay (error))]
          (delay [(lam payload_40 payload_40) [(builtin unListData) generated_42]])]
          (delay (error))]
          (delay (error))]))
      anf_41])
    [(builtin listData) (con (list (pair data integer)) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_42
    [(lam anf_41 data_operand_42) [(builtin listData) data_operand_42]])
    (con (list (pair data integer)) [])])
--- result
error: Runtime(TypeMismatch(Data, ProtoList(Pair(Data, Integer), [])))
--- logs
[]
