crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_wrong_pair_items_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (con (list (pair data integer)) [((I 42), 7)]) of
  DataList payload#46 -> payload#46
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_47
    (force
      [[[[[[(force (builtin chooseData)) generated_47] (delay (error))] (delay (error))]
        (delay [(lam payload_46 payload_46) [(builtin unListData) generated_47]])]
        (delay (error))]
        (delay (error))]))
    [(builtin listData) (con (list (pair data integer)) [((I 42), 7)])]])
--- optimized Core
let data_operand#3 : list (pair Data int) = (con (list (pair data integer)) [((I 42), 7)]) in
let anf#2 : Data = listData data_operand#3 in
data_operand#3
--- optimized UPLC
(program 1.1.0
  [(lam data_operand_1
    [(lam anf_4 data_operand_1) [(builtin listData) data_operand_1]])
    (con (list (pair data integer)) [((I 42), 7)])])
--- isolated pass
--- isolated ANF input
let anf#47 : Data = listData (con (list (pair data integer)) [((I 42), 7)]) in
case@Data anf#47 of
  DataList payload#46 -> payload#46
--- isolated folded Core
let data_operand#48 : list (pair Data int) = (con (list (pair data integer)) [((I 42), 7)]) in
let anf#47 : Data = listData data_operand#48 in
let payload#46 : list Data = data_operand#48 in
payload#46
--- isolated cleaned Core
let data_operand#48 : list (pair Data int) = (con (list (pair data integer)) [((I 42), 7)]) in
let anf#47 : Data = listData data_operand#48 in
data_operand#48
--- isolated UPLC before
(program 1.1.0
  [(lam anf_47
    [(lam generated_48
      (force
        [[[[[[(force (builtin chooseData)) generated_48] (delay (error))] (delay (error))]
          (delay [(lam payload_46 payload_46) [(builtin unListData) generated_48]])]
          (delay (error))]
          (delay (error))]))
      anf_47])
    [(builtin listData) (con (list (pair data integer)) [((I 42), 7)])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_48
    [(lam anf_47 data_operand_48) [(builtin listData) data_operand_48]])
    (con (list (pair data integer)) [((I 42), 7)])])
--- result
error: Runtime(TypeMismatch(Data, ProtoList(Pair(Data, Integer), [ProtoPair(Data, Integer, Data(Integer(42)), Integer(7))])))
--- logs
[]
